--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      
      <header id="fenzhi-nav"> 
    <div class="main"> 
-    <h1 class="logo"> <a> <span>BC工具列表</span> </a> </h1> 
+    <h1 class="logo"> <a> <span>工具列表</span> </a> </h1> 
     <nav class="nav"> 
      <ul> 
       <!--获取导航链接/从首页向下第一个栏目起/只显示nav栏目组--> 
