--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <!----> 
            </div> 
            <div class="info-item">
-             iOS 11.0 - 12.4.1 bc工具,只支持A12,版本号：3.8.0b1
+             iOS 11.0 - 12.4.1 bc工具,只支持A12，版本号：3.8.0b2（支持12.3-12.3.1）
            </div>
           </div>
          </div>
