--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <!----> 
            </div> 
            <div class="info-item">
-             iOS 13 - 13.3 工具,支持A12 A13,版本号：4.1.1
+             iOS 13 - 13.3 工具,支持A8-A12 A13,版本号：4.2.0
            </div>
           </div>
          </div>
