--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <link href="css/sweetalert.min.css" rel="stylesheet">
         <script src="js/sweetalert.min.js"></script>
         <script type="text/javascript">
-  swal("证书状态：正常", "欢迎访问bc工具\n官方群954441258\n问题互助解答\n注意事项\n证书已更新，请重新安装。\n安装前请确认手机系统时间正常\n请卸载后再安装本站工具 ","success")
+  swal("证书状态：正常", "欢迎访问bc工具\n提供10-13在线工具安装\n注意事项\n证书已更新，请重新安装。\n安装前请确认手机系统时间正常\n请卸载后再安装本站工具 ","success")
         </script>
         <!--网站首页弹窗结束-->
      
