--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
 })();
 </script>
    
+ <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278512491'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1278512491' type='text/javascript'%3E%3C/script%3E"));</script>
  <!--网站首页弹窗开始-->
         <link href="css/sweetalert.min.css" rel="stylesheet">
         <script src="js/sweetalert.min.js"></script>
